--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -2,7 +2,23 @@ body
   margin: 0
   padding: 0
 
-#note-graph
-  width: 100%
+#root
+  position: relative
+
+#panel
+  position: absolute
+  right: 0
+  width: 40vw
   height: 100vh
-  background: #673C4F
+  padding-top: 15px
+  background: #fff
+
+#note-graph
+  position: absolute
+  z-index: -1
+  width: 100vw
+  height: 100vh
+  background: #696D7D
+
+.note-textarea
+  height: 90%
