--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -12,13 +12,15 @@ body
   height: 100vh
   padding-top: 15px
   background: #fff
+  textarea
+    height: 90%
 
 #note-graph
   position: absolute
   z-index: -1
   width: 100vw
   height: 100vh
-  background: #696D7D
+  background: #F2F5EA
 
-.note-textarea
-  height: 90%
+.options
+  padding-bottom: 15px
