--- a/src/main/index.sass
+++ b/src/main/index.sass
@@ -12,6 +12,7 @@ body
   height: 100vh
   padding-top: 15px
   background: #fff
+  overflow-y: scroll
   textarea
     height: 90%
 
@@ -24,3 +25,9 @@ body
 
 .options
   padding-bottom: 15px
+
+pre
+  padding: .2rem .4rem
+  font-size: 90%
+  background-color: #f7f7f9
+  border-radius: .25rem
