--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -25,6 +25,11 @@ body
 
 .options
   padding-bottom: 15px
+  width: 100%
+  height: 3rem
+  .btn-group
+    float: right
+
 
 pre
   padding: .2rem .4rem
