--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -15,6 +15,9 @@ body
   overflow-y: scroll
   box-shadow: 4px 0 8px
   textarea
+    border: none
+    outline: none
+    width: 100%
     height: 90%
 
 #note-graph
@@ -24,13 +27,18 @@ body
   height: 100vh
   background: #F2F5EA
 
-.options
+.toolbar
   padding-bottom: 15px
   width: 100%
-  height: 3rem
-  .btn-group
-    float: right
-
+  .close
+    margin-top: 5px
+    float: none
+  .toolbar-middle
+    text-align: center
+  .toolbar-right
+    text-align: right
+    .btn-sm
+      margin-top: 5px
 
 pre
   padding: .2rem .4rem
