--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -22,7 +22,7 @@ $brand-warning:             $orange !default
 $brand-danger:              $red !default
 $brand-inverse:             $gray-dark !default
 
-$graph-background: #F2F5EA
+$graph-background: #fdfdfd
 
 body
   margin: 0
@@ -74,11 +74,15 @@ body
   background: #fff
   overflow-y: scroll
   box-shadow: 4px 0 8px
-  textarea
-    border: none
-    outline: none
-    width: 100%
-    height: 90%
+  .note-form
+    textarea
+      resize: none
+      padding: 0
+      border: none
+      outline: none
+      width: 100%
+  .connected-note a
+    color: inherit
 
 #note-graph
   position: absolute
