screw around with colors

--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -22,7 +22,7 @@ $brand-warning:             $orange !default
 $brand-danger:              $red !default
 $brand-inverse:             $gray-dark !default
 
-$graph-background: #fdfdfd
+$graph-background: #fff
 
 body
   margin: 0
@@ -73,7 +73,7 @@ body
   padding-top: 15px
   background: #fff
   overflow-y: scroll
-  box-shadow: 4px 0 8px
+  box-shadow: 8px 0 16px
   .note-form
     textarea
       resize: none
