change markdown reference url

--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -61,7 +61,7 @@ body
       margin-right: 15px
 
 .overlay.active
-  background: $gray-dark
+  background: $black
   border-radius: .25rem
   color: $graph-background
 
