--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -83,6 +83,9 @@ body
       width: 100%
   .connected-note a
     color: inherit
+  img
+    max-width: 100%
+    height: auto
 
 #note-graph
   position: absolute
