add language highlighting for code blocks

--- a/src/main/stylesheets/index.sass
+++ b/src/main/stylesheets/index.sass
@@ -27,6 +27,7 @@ $graph-background: $base03
 
 @import '../../../node_modules/bootstrap/scss/bootstrap.scss'
 @import '../../../node_modules/font-awesome/scss/font-awesome.scss'
+@import '../../../node_modules/highlight.js/styles/solarized-light.css'
 
 body
   margin: 0
@@ -109,10 +110,3 @@ body
     text-align: right
     .btn-sm
       margin-top: 6px
-
-pre
-  padding: .2rem .4rem
-  font-size: 90%
-  background-color: $base03
-  color: $base1
-  border-radius: .25rem
